Opened 8 years ago
Closed 8 years ago
#13069 closed bug (fixed)
media_addon_server crash
Reported by: | AlienSoldier | Owned by: | Barrett |
---|---|---|---|
Priority: | high | Milestone: | R1/beta1 |
Component: | Servers/media_addon_server | Version: | R1/Development |
Keywords: | media add-on | Cc: | |
Blocked By: | Blocking: | ||
Platform: | x86 |
Description
this happen lot when using youtube in web+
When it happen web+ does not crash right away (but it might on closing it later on). At that point there is no sound and no reteart of the media add-on or media server can fix it, it need a reboot of the machine.
crash report included.
Attachments (1)
Change History (7)
by , 8 years ago
Attachment: | media_addon_server-377-debug-09-11-2016-20-02-15.report added |
---|
comment:1 by , 8 years ago
comment:2 by , 8 years ago
Component: | - General → Servers/media_addon_server |
---|---|
Owner: | changed from | to
comment:3 by , 8 years ago
Status: | new → assigned |
---|
Reach me in IRC tomorrow, we will try to sort it out.
comment:5 by , 8 years ago
Resolution: | fixed |
---|---|
Status: | closed → reopened |
I just tested hrev50755 and I still see media_addon_server crashing. I don't have full debug report due to #13082.
Here's all it got:
Debug information for team /boot/system/servers/media_addon_server (596): CPU(s): 4x Intel Core 2 Memory: 8.00 GiB total, 688.76 MiB used Haiku revision: hrev50755 Dec 10 2016 17:52:44 (BePC) Active Threads: thread 596: media_addon_server (main) thread 599: _BMediaRoster_ thread 600: media_addon_server control thread 601: System clock control thread 671: HD Audio control thread 673: multi_audio audio output thread 732: Yeah baby, very shagadelic thread 748: FireWire-0 control thread 1047: Attack of the Killer Tomatoes thread 1053: team 596 debug task thread 641: Audio Mixer control state: Call (BufferCache::GetBuffer: IDs mismatch) Frame IP Function Name ----------------------------------------------- 00000000 0x61e76112 commpage_syscall + 0x2
comment:6 by , 8 years ago
Resolution: | → fixed |
---|---|
Status: | reopened → closed |
This is a completely different issue, see #12448 for a temporary solution too.
Note:
See TracTickets
for help on using tickets.
It force me to reset the machine 4-5 day (really annoying). It have to do with webpositive mainly because i now got it to happen a few time without having mediaplayer open (and not opened yet for the whole session).