src/kits/media/MediaEventLooper.cpp
@@ -241,9 +241,6 @@ BMediaEventLooper::ControlLoop()
 				// the client code to detect when the buffer
 				// is handled late or early.
 				bigtime_t lateness = TimeSource()->RealTime() - waitUntil;
-				// Maximum amount of lateness we tolerate
-				if (lateness < 3000L)
-					lateness = 0;
 
 				DispatchEvent(&event, lateness, hasRealtime);
 			}
